--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <script src="unpkg./@babel/standalone@7/babel.min.js"></script>
+    <script src="unpkg./react@18/umd/react.development.js" crossorigin></script>
+    <script src="unpkg./react-dom@18/umd/react-dom.development.js" crossorigin></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
